# dyn-advisor

./: .env.example  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dyn_advisor/: __init__.py  catalog.py  cli.py  executor.py  parser.py  recommender.py
examples/docs/: graph_documentation.md
examples/graphs/: point_grid.dyn  simple_rectangle.dyn  wall_analyzer.dyn
tests/: test_catalog.py  test_executor.py  test_parser.py  test_recommender.py
